	src NSGCountedSet.m: optimised coding/decoding
	src/NSGDictionary.m: optimised coding/decoding
	src/NSGSet.m: optimised coding/decoding
	src/NSObject.m: cache data classes
	src/NSString.m: Added (nonstandard) ([-boolValue]) method
	src/include/NSData.h: Added ([-relinquishAllocatedBytesFromZone:])
	src/include/NSString.h: Added (nonstandard) ([-boolValue]) method

Thu Oct 17 08:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSGDictionary.m: Added checks for invalid parameters.
	src/NSGSet.m: Added checks for invalid parameters.
	src/NSGCountedSet.m: Added checks for invalid parameters.

Thu Oct 15 08:13:12 1998  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

	* src/NSString.m ([NSString
 	-completePathIntoString:caseSensitive:matchesIntoArray:filterTypes:]):
 	Implement.

Thu Oct 15 06:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/BinaryCStream.m: Update system version number
	* src/NSCalendarDate.m: Implemented ([-copyWithZone:])
	* src/NSCountedSet.m: Rewrite ([-copyWithZone:])
	* src/include/NSData.h: Added GNUstep specific method for more
	efficient zone use.
	* src/NSData.m: Modified throughout to use NSZone functions for
	managing content memory.
	* src/NSGArray.m: Modified to use NSZone functions for managing
	content memory.  Also tidied coding methods.
	* src/include/NSGCString.h: Modified to use NSZone for contents.
	* src/NSGCString.m: Modified to use NSZone for contents and fixed
	bug in coding (couldn't cope with embedded nuls in string).
	* src/NSGDictionary.m: Modified to use NSZone for contents.
	* src/include/NSGString.h: Modified to use NSZone for contents.
	* src/NSGString.m: Modified to use NSZone for contents.
	* src/NSObject.m: Added fastZone() function.
	* src/PortCoder.m: Updated system version number
	* src/include/NSSet.h: Added ([+setWithSet:])
	* src/NSSet.m: Added ([+setWithSet:]) and fixed ([-copyWithZone:])
	* src/include/NSString.h: Added GNUstep specific methods for faster